# QueryX

./: .gitignore  README.md  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.yml  draft  render.yaml
backend/: Dockerfile  app.example.com+4-key.pem  app.example.com+4.pem  main.py  pyproject.toml
backend/alembic/versions/: 5c89a726934c_add_item_migration.py  ae0b63479948_init_db.py  d8d827ad33ee_init_db.py
backend/app/: factory.py
backend/app/api/: __init__.py  documents.py  queries.py
backend/app/core/: config.py
backend/app/email/: send_mail.py
backend/app/models/: __init__.py  document.py  user.py
backend/app/openai/: base.py  core.py
backend/app/parser/: chunk.py  interface.py  parser.py
backend/app/parser/parsers/: __init__.py  csv.py  docx.py  pdf.py  txt.py
backend/app/schemas/: document.py
backend/app/vectorstore/: qdrant.py
backend/tests/: conftest.py
backend/tests/api/: test_document.py  test_query.py
backend/tests/models/: test_document.py  test_user.py
backend/tests/openai/: test_openai.py
backend/tests/parser/: data.py  test_parser.py
backend/tests/vectorstoer/: test_qdrant.py
backend/tests/vectorstore/: test_qdrant.py
streamlit/: Dockerfile  app.py  client.py  config.toml  config.yaml  exeptions.py  requirements.txt
